# engine

./: CORDS.txt  Cargo.toml  README.md  flake.nix
clock/: Cargo.toml
clock/shaders/: blue.shader.fs
clock/src/: buildings.rs  figures.rs  lib.rs  main.rs  textures.rs
examples/: cube.rs  diamond.rs  flower.rs  humito.rs  infinity.rs  inundation.rs  k-means.rs  mesh.rs  recorte.rs  sun.rs  test.rs  translation.rs  triangle.rs
examples/shaders/: transform.fs
pacman-animation/: README.md
pacman-animation/src/: characters.rs  movements.rs  pacman.rs  pellets.rs  walls.rs
pool/: README.md
pool/src/: main.rs
pool3/: Cargo.toml
pool3/src/: ball.rs  cue.rs
resources/shaders/: yellow.fs
src/: lib.rs  macros.rs
src/algorithms/: circles.rs  cs.rs  curves.rs  ellipse.rs  figures.rs  fill.rs  lines.rs  mod.rs  pixel.rs  raw_attributes.rs  relleno.rs  transformations.rs
src/graphics/: _shader.rs  color.rs  mod.rs  shader.rs  textures.rs  window.rs  wrapper.rs
star-wars/: Cargo.toml  README.md
star-wars/src/: main.rs
